# AutoGLM-GUI

./: .env.example  .gitignore  BUILD_GUIDE.md  PROJECT_ANALYSIS.md  pyproject.toml
.github/workflows/: claude-auto-review.yml
.trae/documents/: add-decision-model-for-assertion.md  align-scheduled-task-sync-fields.md  fix-events-batch-screenshot-overflow.md  scheduled-task-run-now.md
.trae/specs/add-gateway-service/: call-chain-and-debug-guide.md  checklist.md  spec.md  tasks.md
.trae/specs/add-inspection-system-sync/: checklist.md  spec.md  tasks.md
.trae/specs/unify-workflow-table-structure/: checklist.md  spec.md  tasks.md
AutoGLM_GUI/: __main__.py  config_manager.py  device_manager.py  layered_agent_service.py  logger.py  phone_agent_manager.py  scheduler_manager.py  server.py  task_manager.py  task_store.py  workflow_manager.py
AutoGLM_GUI/adb_plus/: keyboard_installer.py
AutoGLM_GUI/agents/gemini/: async_agent.py
AutoGLM_GUI/api/: __init__.py  sync_status.py
AutoGLM_GUI/models/: history.py
AutoGLM_GUI/sync/: client.py  device_reporter.py  manager.py  offline_queue.py  push_channel.py  registration.py  schemas.py  sync_pull.py  task_reporter.py
electron/: package.json
frontend/: eslint.config.js  package.json  pnpm-lock.yaml
frontend/e2e/: device-state-routing.spec.ts  trace-events.spec.ts
frontend/public/: favicon.ico.bak
frontend/src/: api.ts  styles.css
frontend/src/components/: ChatKitPanel.tsx  DevicePanel.tsx  DeviceSidebar.tsx  GroupManageDialog.tsx  GroupedDeviceList.tsx  MarkdownContent.tsx  NavigationSidebar.tsx
frontend/src/hooks/: use-mobile.ts
frontend/src/lib/: device-context.tsx
frontend/src/lib/locales/: en.ts  zh.ts
frontend/src/routes/: __root.tsx  about.tsx  chat.tsx  history.tsx  index.tsx  logs.tsx  scheduled-tasks.tsx  terminal.tsx  workflows.tsx
tests/: test_adb_keyboard_check.py  test_gemini_agent.py  test_manager_device_coverage.py  test_sync.py  test_task_manager.py  test_trace_observability_integration.py  test_workflow_steps.py
